--- a/near-friendly/package.json
+++ b/near-friendly/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "tslint ./src/**/*.ts",
+    "start": "webpack-dev-server --config ./webpack/webpack.dev.js",
+    "test": "karma start ./karma/karma.conf.js",
+    "test:headless": "karma start ./karma/karma.conf.js --browsers PhantomJS"
   },
   "keywords": [],
   "author": "",
@@ -29,14 +32,16 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "node-sass": "^3.10.1",
     "phantomjs-prebuilt": "^2.1.13",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
     "ts-loader": "^0.9.5",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.0.6",
     "typings": "^1.4.0",
-    "webpack": "^1.13.2",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
 }
